--- a/front/src/components/items.css
+++ b/front/src/components/items.css
@@ -1,10 +1,15 @@
 .item-square {
-  border: 2px solid black;
-  position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   overflow: hidden;
+  border: 2px solid black;
+  cursor: grab;
+  transition: transform 0.2s ease-in-out;
+  position: relative;
+  z-index: 1;
 }
 
 .item-name {
