--- a/front/src/components/items.css
+++ b/front/src/components/items.css
@@ -26,9 +26,9 @@
 
 .item-image-wrapper {
   position: relative;
-  width: 80%;
+  width: 100%;
+  height: 100%; /* garanta altura para centralizar vertical */
 }
-
 
 .item-usage {
   display: grid;
@@ -46,8 +46,16 @@
   border: 1px solid black;
 }
 
+.item-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .item-image img {
-  max-width: 100%;
+  max-width: 80%;
+  height: auto;
 }
 
 .sem-imagem {
@@ -64,3 +72,17 @@
   transform: scale(1.05);
   z-index: 10;
 }
+
+.item-info-line {
+  margin-top: 2px;
+  font-size: 0.65rem;
+  color: #333;
+  text-align: right;
+  opacity: 0.8;
+  position: absolute;
+  z-index: 2;
+  right: 2px;
+  top: 2px;
+}
+
+
