--- a/front/src/components/styles/items.css
+++ b/front/src/components/styles/items.css
@@ -1,7 +1,7 @@
 .item-square {
   border: 1px solid #666;
   box-sizing: border-box;
-  background-color: #ddd;
+  background-color: white;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -65,7 +65,7 @@
 }
 
 .grid-cell {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: white;
 }
 
 .item-square:hover {
