Refactor: refatoração do funcionamento e layout da criação de itens

--- a/front/src/components/styles/CheckBoxInput.css
+++ b/front/src/components/styles/CheckBoxInput.css
@@ -1,4 +1,4 @@
-/* src/components/CheckBoxInput.css */
+src/components/CheckBoxInput.css
 .checkbox-label {
   display: flex;
   align-items: center;
