--- a/front/src/components/styles/Errormensage.css
+++ b/front/src/components/styles/Errormensage.css
@@ -1,9 +1,10 @@
-.character-name-input {
-    font-size: 1.5rem;
+.error-message {
+    color: #a00;
+    background-color: #fdd;
+    padding: 1rem;
+    border: 1px solid #a00;
+    border-radius: 5px;
+    margin: 1rem 0;
     font-weight: bold;
-    margin-left: 0.5rem;
-    padding: 4px 8px;
-    border: 1px solid #aaa;
-    border-radius: 4px;
   }
   
