Fix: Criação de componentes e padronização dos styles

--- a/front/src/App/FichaDoPersonagem.css
+++ b/front/src/App/FichaDoPersonagem.css
@@ -1,5 +1,4 @@
-.character-sheet {
-  /*max-width: 600px;*/
+/* .character-sheet {
   margin: auto;
   padding: 20px;
   background-color: #f3f3f3;
@@ -13,4 +12,4 @@
 
 .character-sheet p, li {
   margin: 5px 0;
-}
+} */
