--- a/front/src/components/styles/items.css
+++ b/front/src/components/styles/items.css
@@ -1,7 +1,7 @@
 .item-square {
   border: 1px solid #666;
   box-sizing: border-box;
-  background-color: #ddd;
+  background-color: white;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -22,7 +22,6 @@
   background-color: white;
   font-size: 0.9rem;
 }
-
 
 .item-image-wrapper {
   position: relative;
@@ -65,7 +64,7 @@
 }
 
 .grid-cell {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: white;
 }
 
 .item-square:hover {
@@ -84,5 +83,3 @@
   right: 2px;
   top: 2px;
 }
-
-
