--- a/front/src/components/styles/Header.css
+++ b/front/src/components/styles/Header.css
@@ -31,8 +31,12 @@
   cursor: pointer;
 }
 
+.link:hover {
+  color: #222222;
+}
+
 .button-logout {
-  background-color: #cc0000;
+  background-color: #2b2b2b;
   color: white;
   padding: 8px 12px;
   border: none;
@@ -62,6 +66,13 @@
   display: block;
 }
 
+.dropdown-content a:hover {
+  background-color: #cacaca;
+  color: #222222;
+  border-radius: 6px 6px 6px 6px;
+}
+
 .dropdown:hover .dropdown-content {
   display: block;
+  border-radius: 6px;
 }
