--- a/front/src/components/styles/Input.css
+++ b/front/src/components/styles/Input.css
@@ -23,6 +23,7 @@
   border-color: #ddd;
   transition: border-color 0.3s ease;
   background-color: #ddd;
+  color: #1c1c1c99;
 }
 
 .custom-input:focus {
