--- a/front/src/components/styles/Button.css
+++ b/front/src/components/styles/Button.css
@@ -1,27 +1,50 @@
+.menu-button {
+  width: 100%; /* ocupa toda a largura do menu */
+  background-color: #2f2f2f; /* cinza escuro */
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-bottom: 8px; /* espaçamento entre botões */
+  text-align: center;
+  transition: background-color 0.3s ease;
+  display: block;
+}
+
+.menu-button:hover {
+  background-color: #444444; /* cinza mais claro no hover */
+}
+
 .image-input-label {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-  }
-  
-  .image-input-button {
-    display: inline-block;
-    padding: 12px 20px;
-    background-color: #2563eb; /* Azul */
-    
-    color: white;
-    font-weight: 600;
-    border-radius: 0.75rem;
-    transition: background-color 0.3s ease;
-    font-size: 1rem;
-    text-align: center;
-  }
-  
-  .image-input-button:hover {
-    background-color: #495faa;
-  }
-  
-  .image-input-hidden {
-    display: none;
-  }
-  
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.image-input-button {
+  display: inline-block;
+  padding: 12px 20px;
+  background-color: #2f2f2f; /* Azul */
+
+  color: white;
+  font-weight: 600;
+  border-radius: 0.75rem;
+  transition: background-color 0.3s ease;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.image-input-button:hover {
+  background-color: #2f2f2f;
+}
+
+.image-input-hidden {
+  display: none;
+}
+
+.import-button-spacing {
+  margin-bottom: 20px;
+}
