--- a/front/src/components/styles/CheckBoxInput.css
+++ b/front/src/components/styles/CheckBoxInput.css
@@ -1,3 +1,4 @@
+src/components/CheckBoxInput.css
 .checkbox-label {
   display: flex;
   align-items: center;
@@ -17,7 +18,6 @@
   background-color: #fff;
   transition: all 0.2s ease-in-out;
   position: relative;
-  cursor: pointer;
 }
 
 .checkbox-label input[type="checkbox"]:checked {
@@ -33,7 +33,7 @@
 
 .checkbox-label input[type="checkbox"]:checked::after {
   display: block;
-  content: "✓";
+  content: '✓';
   position: absolute;
   top: 0;
   margin-top: -2px;
